<resources>
    <string name="app_name">Session101</string>
    <string name="result">Result</string>
    <string name="plus">Plus</string>
    <string name="insert_the_second_value">Insert the second value</string>
    <string name="insert_the_first_value">Insert the first value</string>
    <string name="add">Add</string>
    <string name="substract">Substract</string>
    <string name="execute">Execute</string>
    <string name="insert_the_number_that_appeared">Insert the number that appeared</string>
    <string name="check">Check</string>
    <string name="about_us">About us</string>
    <string name="back">Back</string>
    <string name="developed_by_jorge_chueca">Developed by Jorge Chueca</string>
    <string name="insert_the_website">Insert the website</string>
    <string name="go">Go!</string>
    <string name="insert_a_valid_url">Insert a valid URL</string>
</resources>